--- a/Website/About/index.html
+++ b/Website/About/index.html
@@ -28,19 +28,43 @@
   </ul>
   <!-- End Nav -->
 
-  <!-- Begin Content -->
-  <div class="marketing-site-content-section">
-    <div class="marketing-site-content-section-img">
-      <img src="http://nycptechschools.org/web/sites/default/files/schools_btech.gif" alt="" />
-    </div>
-    <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">BE INformed!</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Business Technology Early College High School (BTECH) is a new 9-14 school that opened in September 2014. The school is in partnership with SAP – an international company that specializes in business enterprise software and Queensborough Community College of the City University of New York (QCC).. Successful completion of the high school and college degree programs, earns the students opportunities for employment at SAP or in the thousands of companies around the globe who run SAP software. BTECH's mission is to combine academic excellence with technical aptitude thus empowering students to be successful in our modern, information-based global economy and community.</p>
-      <a href="https://www.youtube.com/watch?v=QBd6jz2IYXw" class="round button small">Video for you!</a>
-    </div>
-    <div class="marketing-site-content-section-block small-order-2 medium-order-1">
+  <!--Begin Hero-->
+  <div class="hero-section">
+    <div class="hero-section-text">
+      <h1>Header</h1>
+      <h5>subtitle about anything you like</h5>
     </div>
   </div>
+
+
+  
+  <!--End Hero-->
+
+  <!-- Begin Content -->
+  <section class="four-up-feature">
+    <div class="row four-up-feature-header align-center">
+      <div class="medium-8 columns">
+        <h2>About the School and Our Partners</h2>
+        <h5> This is what makes us who we are. BTECH REPRESENT!</h5>
+      </div>
+    </div>
+    <div class="row align-spaced">
+      <div class="small-10 medium-4 columns">
+        <img class="four-up-feature-image" src="http://www.qcc.cuny.edu/b-tech/images/BTECH_CMYK.png" alt="icon">
+        <h4>Business Technology Early College High School (BTECH)</h4>
+        <p class="four-up-feature-text">Business Technolgy Early College High School is an innovative new school that enables students to earn a high school diploma, an associate’s degree and gain relevant work experience in the business technology field, with the mission of combining academic excellence and technical aptitude. The six-year program is the result of a partnership between the Department of Education, Queensborough Community College and software corporation SAP. Students will enroll in dual-credited courses and participate in work-based learning experiences, such as mentoring, job site visits, apprenticeship and internships. Successful completion of the high school and college degree programs earns students the opportunities for employment. The goal is to develop the next generation of talent in science, technology, engineering, and mathematics.</p>
+      </div>
+      <div class="small-10 medium-4 columns">
+        <img class="four-up-feature-image" src="https://upload.wikimedia.org/wikipedia/en/thumb/6/61/QueensboroughCC_seal.svg/200px-QueensboroughCC_seal.svg.png" alt="icon">
+        <h4>Queensborough Community College</h4>
+        <p class="four-up-feature-text">A core academic curriculum designed and taught by faculty at Queensborough will help students develop a strong liberal arts and technological education.  QCC instructors will teach these courses with the same level of academic rigor as all other courses. This is a special kind of program. Students, teachers and professors at Queensborough are creating these college courses for our students. This will allow students to complete degree programs faster and be more prepared with the skills they need for the real world. BTECH teachers and QCC faculty are mapping the skills to the content at both the high school and college levels.</p>
+      </div>
+      <div class="small-10 medium-4 columns">
+        <img class="four-up-feature-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/SAP_2011_logo.svg/1200px-SAP_2011_logo.svg.png" alt="icon">
+        <h4>SAP</h4>
+        <p class="four-up-feature-text">Enhancing education is one of SAP's top social priorities worldwide. In New York City, SAP launches an initiative: a new type of technology school developed by SAP that combines a high school and college curriculum with a strong focus on business and technology. At B-TECH School, students are enabled to focus on a career in the technology world. About SAP: As market leader in enterprise application software, SAP (NYSE: SAP) helps companies of all sizes and industries run better. From back office to boardroom, warehouse to storefront, desktop to mobile device -- SAP empowers people and organizations to work together more efficiently and use business insight more effectively to stay ahead of the competition. SAP applications and services enable more than 248,500 customers to operate profitably, adapt continuously, and grow sustainably. </p>
+      </div>
+  </section>
   <!-- End Content -->
 
   <!-- Begin Footer -->
