--- a/Website/Academics/index.html
+++ b/Website/Academics/index.html
@@ -34,7 +34,7 @@
       <img src="https://cdn.andertoons.com/img/toons/cartoon2208.png" alt="" />
     </div>
     <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Academic Epdiemic</h3>
+      <h3 class="marketing-site-content-section-block-header">Academic Epidemic</h3>
       <p class="marketing-site-content-section-block-subheader subheader">Need Help checking your Progress? You've come to the right place! With these two awesome links you will feel MOTIVATED <br> If you need help signing up, don't hesitate and contact the school!</p>
       <a href="https://pupilpath.skedula.com/" class="round button small">Pupilpath</a>
       <a href="https://mystudent.nyc/" class="round button small">NYC School Account</a>
