--- a/Website/Multi-Media/index.html
+++ b/Website/Multi-Media/index.html
@@ -29,22 +29,33 @@
   <!-- End Nav -->
 
   <!-- Begin Content -->
-  <div class="marketing-site-content-section">
-    <div class="marketing-site-content-section-img">
-      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
-    </div>
-    <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-block small-order-2 medium-order-1">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+  <div class="fullscreen-image-slider">
+    <div class="orbit" role="region" aria-label="FullScreen Pictures" data-orbit>
+      <ul class="orbit-container">
+        <button class="orbit-previous">
+          <span class="show-for-sr">Previous Slide</span>
+          <span class="nav fa fa-chevron-left fa-3x"></span>
+        </button>
+        <button class="orbit-next">
+          <span class="show-for-sr">Next Slide</span>
+          <span class="nav fa fa-chevron-right fa-3x"></span>
+        </button>
+        <li class="is-active orbit-slide">
+          <img class="orbit-image" src="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/376d7c2e-95c8-480d-9aab-2eede157c82a?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&Expires=1790863658&response-content-disposition=attachment%3Bfilename%3D%22P1000609.jpg%22&response-content-type=image%2Fjpeg&Signature=ttj0hTjevHvzx%2BzCBHS1c5mwjlk%3D" alt="Space">
+          <figcaption class="orbit-caption">
+          </figcaption>
+        </li>
+        <li class="orbit-slide">
+          <img class="orbit-image" src="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/51b1a85f-4ae4-450e-8920-1f90bf00e8d6?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&Expires=1790863658&response-content-disposition=attachment%3Bfilename%3D%22P1000758.jpg%22&response-content-type=image%2Fjpeg&Signature=1%2F7W3vRTb24F3rGpWQt1woOKxd4%3D" alt="Space">
+          <figcaption class="orbit-caption">
+          </figcaption>
+        </li>
+        <li class="orbit-slide">
+          <img class="orbit-image" src="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/e55d2b18-7cfa-4395-9648-cfd9b0f71ed9?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&Expires=1790845664&response-content-disposition=attachment%3Bfilename%3D%22DSC_6653.jpg%22&response-content-type=image%2Fjpeg&Signature=lreLsGfx7f45yBNEZaVcb9axwTM%3D" alt="Space">
+          <figcaption class="orbit-caption">
+          </figcaption>
+        </li>
+      </ul>
     </div>
   </div>
   <!-- End Content -->
