--- a/Website/Parents/index.html
+++ b/Website/Parents/index.html
@@ -105,65 +105,9 @@
     </div>
     <div class="card-info-content">
       <h3 class="lead"> Cell Phone Policy</h3>
-      <p>SCHOOL-BASED POLICY OF BUSINESS TECHNOLOGY EARLY COLLEGE HIGH SCHOOL FOR USE OF CELL PHONES, COMPUTING DEVICES, AND PORTABLE MUSIC AND ENTERTAINMENT SYSTEMS ON SCHOOL PROPERTY
-
-<br>Students are permitted to bring the following electronic items to school: <br>1) cell phones;<br> 2) laptops, tablets, iPads and other similar computing devices (“computing devices”); <br>3) portable music and entertainment systems, such as iPods, MP3 players, PSP, and Nintendo DS.
-
-<br> 1)The use of cell phones, computing devices and portable music and entertainment systems at school is subject to the conditions below.
-<br> 2)Cell phones and portable music and entertainment systems may not be turned on or used during the administration of any school quiz, test or examination.
-<br> 3)Computing devices may not be turned on or used during the administration of any school quiz, test or examination, except where such use has been explicitly authorized by the school or is contained in an Individualized Education Program or Section 504 Accommodation Plan.
-<br> 4)Cell phones, computing devices, and portable music and entertainment systems may not be turned on or used during school fire drills or other emergency preparedness exercises.
-<br> 5)Cell phones, computing devices, and portable music and entertainment systems may not be used in locker rooms or bathrooms.
-<br> 6)Students who use cell phones, computing devices, and/or portable music and entertainment systems in violation of any provision of the DOE’s Discipline Code, the school’s policy, Chancellor’s regulation A-413, and/or the DOE’s Internet Acceptable Use and Safety Policy (“IAUSP”) will be subject to discipline in accordance with the guidance interventions and disciplinary responses set forth in the Discipline Code.
-<br> 7)Cell phones may be used as set forth below (select from bullets below or select other options consistent with Regulation A-413).
-<br>During the school day:
-
-<br>1)Cell phones may not be turned on or used during instructional time, except for instructional and educational purposes with the explicit approval of the teacher.
-<br>2)Cell phones may be used during the following non-instructional times of the school day: LUNCH in the following designated areas: CAFETERIA
-<br>3)Other(describe) _____________________________________________________________.
-<br>During after-school, school-sponsored programs or activities:
-
-<br>As determined by the teacher as part of an instructional plan.
-
-<br>1)Computing devices may be used as set forth below (select from bullets below or select other options consistent with Regulation A-413).
-<br>During the school day:
-
-<br>1)Computing systems may not be turned on or used during instructional time, except for instructional and educational purposes with the explicit approval of the teacher.
-<br>2)Computing systems may be turned on and used only during instructional time for instructional and educational purposes.
-<br>3)Computing devices may be used during the following non-instructional times of the school day: LUNCH in the following designated areas: CAFETERIA
-<br>4)Other(describe) _____________________________________________________________.
-<br>During after-school, school-sponsored programs or activities:
-
-<br>Describe policy for use, considering the nature and location of such programs or activities, and the time of day they take place.
-
-<br>As determined by teacher as part of an instructional plan.
-
-<br>1)Portable music and entertainment systems may be used as set forth below (select from bullets below or select other options consistent with Regulation A-413).
-<br>During the school day:
-
-<br>Portable music and entertainment systems may not be used in areas where swimming pools are located.
-<br>Portable music devices and entertainment systems may not be turned on or used while on school property.
-<br>Portable music devices and entertainment systems may not be turned on or used during instructional time, except for instructional and educational purposes with the explicit approval of the teacher.
-<br>Portable music devices and entertainment systems may be used during
-<br>the following non-instructional times of the school day: LUNCH in the following designated areas: CAFETERIA_
-<br>Other(describe) _____________________________________________________________.
-<br>During after-school, school-sponsored activities:
-
-<br>Describe policy for use, considering the nature and location of such programs or activities, and the time of day they take place.
-
-<br>As determined by teacher as part of an instructional plan.
-
-<br>Shared space in campus schools
-<br>In campus schools, include the policy developed by the Building Council regarding the use of electronic items in shared spaces that are jointly occupied, such as the auditorium, hallways, and cafeterias.
-
-<br>Confiscation and return of electronic items
-<br>Describe the circumstances under which electronic items may be confiscated and returned. In determining whether to confiscate an electronic device, schools should consider the nature of the violation.  Where appropriate, measures should be instituted in a progressive fashion.  Such measures may include, but are not limited to:
-<br>warnings
-<br>confiscation of item and return at end of school day
-<br>confiscation of item and return following parent conference
-<br>confiscation of item and return following student entering into behavioral contract
-<br>revocation of privilege to bring item to school.
-      </p>
+      <p>During the school day:
+        Cell phones may not be turned on or used during instructional time, except for instructional and educational purposes with the explicit approval of the teacher.
+        Cell phones may be used during the following non-instructional times of the school day: LUNCH in the following designated areas: CAFETERIA</p>
     </div>
   </div>
 
