--- a/Website/Login/index.html
+++ b/Website/Login/index.html
@@ -29,24 +29,18 @@
   <!-- End Nav -->
 
   <!-- Begin Content -->
-  <div class="marketing-site-content-section">
-    <div class="marketing-site-content-section-img">
-      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
-    </div>
-    <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-block small-order-2 medium-order-1">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
-    </div>
-  </div>
+  <form class="log-in-form">
+    <h4 class="text-center">Log in with you email account</h4>
+    <label>Email
+      <input type="email" placeholder="somebody@example.com">
+    </label>
+    <label>Password
+      <input type="password" placeholder="Password">
+    </label>
+    <input id="show-password" type="checkbox"><label for="show-password">Show password</label>
+    <p><input type="submit" class="button expanded" value="Log in"></input></p>
+    <p class="text-center"><a href="#">Forgot your password?</a></p>
+  </form>
   <!-- End Content -->
 
   <!-- Begin Footer -->
